--- a/academics/academics.html
+++ b/academics/academics.html
@@ -16,34 +16,37 @@
 <body>
     <header>
         <div class="top-nav">
-            <span class="contact"><img class="phone-icon" src="https://img.icons8.com/color/48/000000/phone.png" />
+            <span class="contact"
+                ><img
+                    class="phone-icon"
+                    src="https://img.icons8.com/color/48/000000/phone.png"
+                />
                 &nbsp; +91 99999 99999
             </span>
-            <span class="menu-button"><span></span><img
-                    src="https://img.icons8.com/material-outlined/24/000000/airplane-mode-on.png" /></span>
-            <span class="main-icon"><img src="../common/images/SHK_logo" alt="" /></span>
+            <span class="menu-button"
+                ><span></span
+                ><img
+                    src="https://img.icons8.com/material-outlined/24/000000/airplane-mode-on.png"
+            /></span>
+            <span class="main-icon"
+                ><img src="./common/images/SHK_logo" alt=""
+            /></span>
             <div class="social">
-                <img src="https://img.icons8.com/fluency/48/000000/instagram-new.png" /><img
-                    src="https://img.icons8.com/color/48/000000/facebook.png" />
+                <img
+                    src="https://img.icons8.com/fluency/48/000000/instagram-new.png"
+                /><img src="https://img.icons8.com/color/48/000000/facebook.png" />
             </div>
         </div>
         <div class="bottom-nav">
-            <span><a href="#">HOME</a></span><span><a href="#">ABOUT</a></span><span><a
-                    href="#">ACADEMICS</a></span><span><a href="#">FACILITIES</a></span><span><a
-                    href="#">ACTIVITIES</a></span><span><a href="#">PLACEMENTS</a></span><span><a
-                    href="#">ADMISSION</a></span>
+            <span><a href="./index.html">HOME</a></span
+            ><span><a href="./about/about.html">ABOUT</a></span
+            ><span><a href="./academics/academics.html">ACADEMICS</a></span
+            ><span><a href="./facilities/facilities.html">FACILITIES</a></span
+            ><span><a href="./activities/activities.html">ACTIVITIES</a></span
+            ><span><a href="./placements/placements.html">PLACEMENTS</a></span
+            ><span><a href="./admission/admission.hrml">ADMISSION</a></span>
         </div>
     </header>
-
-
-
-
-
-
-
-
-
-
 
     <div class="firstdiv">
         <h1 class="titlename">Academics</h1>
@@ -74,13 +77,6 @@
                 <button class="button1">Read More</button>
             </p>
 
-
-
-
-
-
-
-
             <div class="contentdiv">
                 <div class="flexdiv">
                     <h4 class="topcss">Eligibility Criteria</h4>
@@ -92,10 +88,6 @@
                     </p>
                 </div>
             </div>
-
-
-
-
 
             <div class="contentdiv">
                 <div class="flexdiv">
@@ -112,9 +104,6 @@
                 </div>
             </div>
 
-
-
-
             <div class="contentdiv">
                 <div class="flexdiv">
                     <h4>Admission:</h4>
@@ -125,8 +114,6 @@
                 </div>
             </div>
 
-
-
             <div class="contentdiv">
                 <div class="flexdiv">
                     <h4>Duration of the course:</h4>
@@ -136,13 +123,9 @@
                     <p class="para para5">
                         The course shall extend over a period of Three years under SEMESTER pattern accounting to six
                         SEMESTERs.
-
                     </p>
                 </div>
             </div>
-
-
-
 
             <div class="contentdiv">
                 <div class="flexdiv">
@@ -164,10 +147,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
 
         <div class="coursetwo">
             <div id="course2"></div>
@@ -192,7 +171,6 @@
                     Aviation course covers diverse topics like design, production and operation of aircraft, it offers
                     diverse
                     job opportunities to graduates.
-
                 </span>
                 <button class="button1">Read More</button>
             </p>
