--- a/facilities/facilities.html
+++ b/facilities/facilities.html
@@ -39,13 +39,13 @@
 				</div>
 			</div>
 			<div class="bottom-nav">
-				<span><a href="#">HOME</a></span
-				><span><a href="#">ABOUT</a></span
-				><span><a href="#">ACADEMICS</a></span
-				><span><a href="#">FACILITIES</a></span
-				><span><a href="#">ACTIVITIES</a></span
-				><span><a href="#">PLACEMENTS</a></span
-				><span><a href="#">ADMISSION</a></span>
+				<span><a href="./index.html">HOME</a></span
+				><span><a href="./about/about.html">ABOUT</a></span
+				><span><a href="./academics/academics.html">ACADEMICS</a></span
+				><span><a href="./facilities/facilities.html">FACILITIES</a></span
+				><span><a href="./activities/activities.html">ACTIVITIES</a></span
+				><span><a href="./placements/placements.html">PLACEMENTS</a></span
+				><span><a href="./admission/admission.hrml">ADMISSION</a></span>
 			</div>
 		</header>
 		<div class="header-img" id="header">
