--- a/facilities/facilities.html
+++ b/facilities/facilities.html
@@ -40,12 +40,12 @@
 			</div>
 			<div class="bottom-nav">
 				<span><a href="../index.html">HOME</a></span
-				><span><a href="./about/about.html">ABOUT</a></span
-				><span><a href="./academics/academics.html">ACADEMICS</a></span
-				><span><a href="./facilities/facilities.html">FACILITIES</a></span
-				><span><a href="./activities/activities.html">ACTIVITIES</a></span
-				><span><a href="./placements/placements.html">PLACEMENTS</a></span
-				><span><a href="./admission/admission.hrml">ADMISSION</a></span>
+				><span><a href="../about/about.html">ABOUT</a></span
+				><span><a href="../academics/academics.html">ACADEMICS</a></span
+				><span><a href="../facilities/facilities.html">FACILITIES</a></span
+				><span><a href="../activities/activities.html">ACTIVITIES</a></span
+				><span><a href="../placements/placements.html">PLACEMENTS</a></span
+				><span><a href="../admission/admission.hrml">ADMISSION</a></span>
 			</div>
 		</header>
 		<div class="header-img" id="header">
@@ -505,7 +505,52 @@
 					accusamus rerum nihil excepturi, iste enim cumque? Vero.
 				</div>
 			</div>
-		</div>
+		</div><footer class="footer">
+			<section class="top">
+				<div class="footerLeft">
+					<div class="upper">
+						<img src="./common/images/SHK_logo" alt="Logo" />
+					</div>
+				</div>
+				<div class="footerRight">
+					<ul>
+						<li><a href="../index.html">HOME</a></li>
+						<li><a href="../about/about.html">ABOUT</a></li>
+						<li><a href="../facilities/facilities.html">FACILITIES</a></li>
+						<li><a href="../academics/academics.html">ACADEMICS</a></li>
+					</ul>
+					<ul>
+						<li><a href="../academics/academics.html">ACTIVITIES</a></li>
+						<li><a href="../admission/admission.html">ADMISSION</a></li>
+						<li><a href="../index.html#contact"></a>CONTACT US</a></li>
+						<li><a href="../placements/placements.html">PLACEMENTS</a></li>
+					</ul>
+				</div>
+			</section>
+			<span class="footerline"></span>
+			<section class="bottom">
+				<div class="social">
+					<a href=""
+						><img
+							src="https://img.icons8.com/fluency-systems-regular/48/ffffff/facebook.png"
+					/></a>
+					<a href=""
+						><img
+							src="https://img.icons8.com/material-outlined/48/ffffff/instagram-new--v1.png"
+					/></a>
+					<a href=""
+						><img
+							src="https://img.icons8.com/material-outlined/48/ffffff/twitter.png"
+					/></a>
+					<a href=""
+						><img src="https://img.icons8.com/ios-filled/48/ffffff/gmail.png"
+					/></a>
+				</div>
+				<div class="copyrights">
+					<h1>&copy; &nbsp;COPYRIGHT SHK AVIATION ACADEMY</h1>
+				</div>
+			</section>
+		</footer>
 		<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 		<script src="./facilities.js"></script>
 		<script src="./SHK_Aviation_Academy/common/nav/nav.js"></script>
