--- a/index.html
+++ b/index.html
@@ -215,16 +215,16 @@ Type your message here...</textarea
 				</div>
 				<div class="footerRight">
 					<ul>
-						<li><a href="">HOME</a></li>
-						<li><a href="">ABOUT</a></li>
-						<li><a href="">FACILITIES</a></li>
-						<li><a href="">ACADEMICS</a></li>
+						<li><a href="./index.html">HOME</a></li>
+						<li><a href="./about/about.html">ABOUT</a></li>
+						<li><a href="./facilities/facilities.html">FACILITIES</a></li>
+						<li><a href="./academics/academics.html">ACADEMICS</a></li>
 					</ul>
 					<ul>
-						<li><a href="">ACTIVITIES</a></li>
-						<li><a href="">ADMISSION</a></li>
-						<li><a href="">CONTACT US</a></li>
-						<li><a href="">PLACEMENTS</a></li>
+						<li><a href="./academics/academics.html">ACTIVITIES</a></li>
+						<li><a href="./admission/admission.html">ADMISSION</a></li>
+						<li><a href="./index.html#contact"></a>CONTACT US</a></li>
+						<li><a href="./placements/placements.html">PLACEMENTS</a></li>
 					</ul>
 				</div>
 			</section>
