--- a/academics/academics.html
+++ b/academics/academics.html
@@ -30,7 +30,7 @@
                     src="https://img.icons8.com/material-outlined/24/000000/airplane-mode-on.png"
             /></span>
             <span class="main-icon"
-                ><img src="../common/images/SHK_logo" alt=""
+                ><img src="./common/images/SHK_logo" alt=""
             /></span>
             <div class="social">
                 <img
@@ -38,17 +38,16 @@
                 /><img src="https://img.icons8.com/color/48/000000/facebook.png" />
             </div>
         </div>
-        <div class="bottom-nav">
-            <span><a href="../index.html">HOME</a></span
-            ><span><a href="../about/about.html">ABOUT</a></span
-            ><span><a href="../academics/academics.html">ACADEMICS</a></span
-            ><span><a href="../facilities/facilities.html">FACILITIES</a></span
-            ><span><a href="../activities/activities.html">ACTIVITIES</a></span
-            ><span><a href="../placements/placements.html">PLACEMENTS</a></span
-            ><span><a href="../admission/admission.hrml">ADMISSION</a></span>
-        </div>
+        <ul class="bottom-nav">
+            <li><a href="../index.html">HOME</a></li>
+            <li><a href="../about/about.html">ABOUT</a></li>
+            <li><a href="../academics/academics.html">ACADEMICS</a></li>
+            <li><a href="../facilities/facilities.html">FACILITIES</a></li>
+            <li><a href="../activities/activities.html">ACTIVITIES</a></li>
+            <li><a href="../placements/placements.html">PLACEMENTS</a></li>
+            <li><a href="../admission/admission.hrml">ADMISSION</a></li>
+        </ul>
     </header>
-
 
 
 
@@ -702,7 +701,7 @@
                 <ul>
                     <li><a href="../academics/academics.html">ACTIVITIES</a></li>
                     <li><a href="../admission/admission.html">ADMISSION</a></li>
-                    <li><a href="../index.html#contact"></a>CONTACT US</a></li>
+                    <li><a href="../index.html#contact">CONTACT US</a></li>
                     <li><a href="../placements/placements.html">PLACEMENTS</a></li>
                 </ul>
             </div>
