--- a/about/about.html
+++ b/about/about.html
@@ -4,9 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../common/nav/nav.css">
     <title>About | SHK Aviation Academy</title>
 </head>
 <body>
+    <header>
+        <div class="top-nav">
+            <span class="contact"
+                ><img
+                    class="phone-icon"
+                    src="https://img.icons8.com/color/48/000000/phone.png"
+                />
+                &nbsp; +91 99999 99999
+            </span>
+            <span class="menu-button"
+                ><span></span
+                ><img
+                    src="https://img.icons8.com/material-outlined/24/000000/airplane-mode-on.png"
+            /></span>
+            <span class="main-icon"
+                ><img src="./common/images/SHK_logo" alt=""
+            /></span>
+            <div class="social">
+                <img
+                    src="https://img.icons8.com/fluency/48/000000/instagram-new.png"
+                /><img src="https://img.icons8.com/color/48/000000/facebook.png" />
+            </div>
+        </div>
+        <ul class="bottom-nav">
+            <li><a href="../index.html">HOME</a></li>
+            <li><a href="../about/about.html">ABOUT</a></li>
+            <li><a href="../academics/academics.html">ACADEMICS</a></li>
+            <li><a href="../facilities/facilities.html">FACILITIES</a></li>
+            <li><a href="../activities/activities.html">ACTIVITIES</a></li>
+            <li><a href="../placements/placements.html">PLACEMENTS</a></li>
+            <li><a href="../admission/admission.hrml">ADMISSION</a></li>
+        </ul>
+    </header>
     
+
+
+
+
+
+
+
+
+
+
+    <script src="../common/nav/nav.js"></script>
 </body>
 </html>
