--- a/academics/academics.html
+++ b/academics/academics.html
@@ -17,25 +17,15 @@
 <body>
     <header>
         <div class="top-nav">
-            <span class="contact"
-                ><img
-                    class="phone-icon"
-                    src="https://img.icons8.com/color/48/000000/phone.png"
-                />
+            <span class="contact"><img class="phone-icon" src="https://img.icons8.com/color/48/000000/phone.png" />
                 &nbsp; +91 99999 99999
             </span>
-            <span class="menu-button"
-                ><span></span
-                ><img
-                    src="https://img.icons8.com/material-outlined/24/000000/airplane-mode-on.png"
-            /></span>
-            <span class="main-icon"
-                ><img src="./common/images/SHK_logo" alt=""
-            /></span>
+            <span class="menu-button"><span></span><img
+                    src="https://img.icons8.com/material-outlined/24/000000/airplane-mode-on.png" /></span>
+            <span class="main-icon"><img src="./common/images/SHK_logo" alt="" /></span>
             <div class="social">
-                <img
-                    src="https://img.icons8.com/fluency/48/000000/instagram-new.png"
-                /><img src="https://img.icons8.com/color/48/000000/facebook.png" />
+                <img src="https://img.icons8.com/fluency/48/000000/instagram-new.png" /><img
+                    src="https://img.icons8.com/color/48/000000/facebook.png" />
             </div>
         </div>
         <ul class="bottom-nav">
@@ -53,10 +43,16 @@
 
 
 
+    <section class="section1" id="header">
+        <h1 class="title">ACADEMICS</h1>
+    </section>
 
 
 
-    <h1 class="titlename">Academics</h1>
+
+
+
+
     <section>
 
         <div class="firstdiv">
@@ -709,21 +705,10 @@
         <span class="footerline"></span>
         <section class="bottom">
             <div class="social">
-                <a href=""
-                    ><img
-                        src="https://img.icons8.com/fluency-systems-regular/48/ffffff/facebook.png"
-                /></a>
-                <a href=""
-                    ><img
-                        src="https://img.icons8.com/material-outlined/48/ffffff/instagram-new--v1.png"
-                /></a>
-                <a href=""
-                    ><img
-                        src="https://img.icons8.com/material-outlined/48/ffffff/twitter.png"
-                /></a>
-                <a href=""
-                    ><img src="https://img.icons8.com/ios-filled/48/ffffff/gmail.png"
-                /></a>
+                <a href=""><img src="https://img.icons8.com/fluency-systems-regular/48/ffffff/facebook.png" /></a>
+                <a href=""><img src="https://img.icons8.com/material-outlined/48/ffffff/instagram-new--v1.png" /></a>
+                <a href=""><img src="https://img.icons8.com/material-outlined/48/ffffff/twitter.png" /></a>
+                <a href=""><img src="https://img.icons8.com/ios-filled/48/ffffff/gmail.png" /></a>
             </div>
             <div class="copyrights">
                 <h1>&copy; &nbsp;COPYRIGHT SHK AVIATION ACADEMY</h1>
