--- a/facilities/facilities.html
+++ b/facilities/facilities.html
@@ -43,7 +43,7 @@
 				<li><a href="../index.html">HOME</a></li>
 				<li><a href="../about/about.html">ABOUT</a></li>
 				<li><a href="../academics/academics.html">ACADEMICS</a></li>
-				<li><a href="../facilities/facilities.html">FACILITIES</a></li>
+				<li class="facilities"><a href="../facilities/facilities.html">FACILITIES</a></li>
 				<li><a href="../activities/activities.html">ACTIVITIES</a></li>
 				<li><a href="../placements/placements.html">PLACEMENTS</a></li>
 				<li><a href="../admission/admission.hrml">ADMISSION</a></li>
@@ -516,16 +516,16 @@
 				</div>
 				<div class="footerRight">
 					<ul>
-						<li><a href="./index.html">HOME</a></li>
-						<li><a href="./about/about.html">ABOUT</a></li>
-						<li><a href="./facilities/facilities.html">FACILITIES</a></li>
-						<li><a href="./academics/academics.html">ACADEMICS</a></li>
+						<li><a href="../index.html">HOME</a></li>
+						<li><a href="../about/about.html">ABOUT</a></li>
+						<li><a href="../facilities/facilities.html">FACILITIES</a></li>
+						<li><a href="../academics/academics.html">ACADEMICS</a></li>
 					</ul>
 					<ul>
-						<li><a href="./academics/academics.html">ACTIVITIES</a></li>
-						<li><a href="./admission/admission.html">ADMISSION</a></li>
-						<li><a href="./index.html#contact">CONTACT US</a></li>
-						<li><a href="./placements/placements.html">PLACEMENTS</a></li>
+						<li><a href="../academics/academics.html">ACTIVITIES</a></li>
+						<li><a href="../admission/admission.html">ADMISSION</a></li>
+						<li><a href="../index.html#contact">CONTACT US</a></li>
+						<li><a href="../placements/placements.html">PLACEMENTS</a></li>
 					</ul>
 				</div>
 			</section>
