--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</div>
 			</div>
 			<ul class="bottom-nav">
-				<li><a href="./index.html">HOME</a></li>
+				<li class="home"><a href="./index.html">HOME</a></li>
 				<li><a href="./about/about.html">ABOUT</a></li>
 				<li><a href="./academics/academics.html">ACADEMICS</a></li>
 				<li><a href="./facilities/facilities.html">FACILITIES</a></li>
