--- a/academics/academics.html
+++ b/academics/academics.html
@@ -22,7 +22,7 @@
             </span>
             <span class="menu-button"><span></span><img
                     src="https://img.icons8.com/material-outlined/24/000000/airplane-mode-on.png" /></span>
-            <span class="main-icon"><img src="./common/images/SHK_logo" alt="" /></span>
+            <span class="main-icon"><img src="../common/images/SHK_logo" alt="" /></span>
             <div class="social">
                 <img src="https://img.icons8.com/fluency/48/000000/instagram-new.png" /><img
                     src="https://img.icons8.com/color/48/000000/facebook.png" />
