--- a/facilities/facilities.html
+++ b/facilities/facilities.html
@@ -105,7 +105,7 @@
 					repellat a quae eaque est at. Ut esse debitis provident obcaecati
 					temporibus excepturi quisquam sed pariatur architecto, quaerat aliquid
 					asperiores quia sequi, et rem magnam rerum vero velit, fugiat eaque.
-					Quisquam inventore vero delectus. Explicabo cum distinctio ullam
+					Quisquam inventore vero delectus. Explicabo cum distinctio ullamgi
 					dolorem, sapiente nulla aut ipsa iusto? Nihil similique labore nam,
 					suscipit repudiandae impedit. Explicabo, tenetur placeat. Minima,
 					tempora quidem enim dolorum aperiam doloribus praesentium, aspernatur,
