--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 			</div>
 		</section>
 		<section class="vision-and-mission">
+			<div class="vision-mission-aside"></div>
 			<div class="mission">
 				<h1 class="mission-h1">MISSION</h1>
 				<ul class="mission-ul">
