--- a/about/about.html
+++ b/about/about.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../common/nav/nav.css">
+    <link rel="stylesheet" href="../common/nav/nav.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../common/footer/footer.css">
+    <link rel="stylesheet" href="about.css" />
     <title>About | SHK Aviation Academy</title>
 </head>
 <body>
@@ -42,6 +47,10 @@
         </ul>
     </header>
     
+    <section class="section1" id="header">
+        <h1 class="title">ACADEMICS</h1>
+    </section>
+
 
 
 
