--- a/placements/placements.html
+++ b/placements/placements.html
@@ -50,7 +50,12 @@
 		<section class="section1" id="header">
 			<h1 class="title">TRAINING & PLACEMENTS</h1>
 		</section>
-		<section class="section0"></section>
+		<section class="section0">
+			<div class="section0div">
+				<h1>Training & Placements</h1>
+				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas dolorem ut itaque blanditiis ab error exercitationem eos voluptate, numquam non culpa fugit quaerat qui natus eveniet nesciunt corporis et vero? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur enim quisquam dolorem quis at. Ipsum accusantium molestias labore eum earum! Magni dolores dignissimos incidunt aliquid cumque velit mollitia nisi unde? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur et aliquam minus. Aut dolores cupiditate molestiae incidunt optio autem at ut! Reprehenderit, consectetur fugit soluta eum beatae iure. Nisi, dolore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut minus repellat vitae placeat! Temporibus cupiditate nemo minima odio ab ratione est, dolorum ipsam maiores, deleniti eum. Provident consectetur harum ducimus.</p>
+			</div>
+		</section>
 		<section class="section2"></section>
 		<section class="section3">
 			<img src="../common/images/tearpaper6.png" alt="" />
