--- a/about/about.html
+++ b/about/about.html
@@ -149,7 +149,7 @@
 
 
 
-    <!-- <footer class="footer">
+    <footer class="footer">
         <section class="top">
             <div class="footerLeft">
                 <div class="upper">
@@ -183,7 +183,7 @@
                 <h1>&copy; &nbsp;COPYRIGHT SHK AVIATION ACADEMY</h1>
             </div>
         </section>
-    </footer> -->
+    </footer>
 
 
 
