--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 		<title>SHK Aviation Academy</title>
 	</head>
 	<body>
-		<div class="preload">
+		<!-- <div class="preload">
 			<div>
 				<img src="./common/images/SHK_logo" alt="" />
 			</div>
-		</div>
+		</div> -->
 		<header>
 			<div class="top-nav">
 				<span class="contact"
@@ -261,8 +261,6 @@ Type your message here...</textarea
 		</footer>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.js"></script>
 		<script src="./common/nav/nav.js"></script>
 		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 		<script src="./common/footer/footer.js"></script>
