--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						<h1 class="slide-h1">
 							<span> To most people, the sky is the limit.</span><br /><span>
 								To those who love aviation, the sky is home.</span
-							><br /><span> - Jerry Crawford</span>
+							><br /><span id="author"> - Jerry Crawford</span>
 						</h1>
 						<img
 							class="carousel-img-1"
@@ -96,7 +96,7 @@
 								>Man must rise above the Earth—to the top of the atmosphere and
 								beyond—for only thus will he fully understand the world in which
 								he lives.</span
-							><br /><span> – Socrates</span>
+							><br /><span id="author"> – Socrates</span>
 						</h1>
 						<img
 							class="carousel-img-2"
