--- a/placements/placements.html
+++ b/placements/placements.html
@@ -56,24 +56,55 @@
 				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas dolorem ut itaque blanditiis ab error exercitationem eos voluptate, numquam non culpa fugit quaerat qui natus eveniet nesciunt corporis et vero? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur enim quisquam dolorem quis at. Ipsum accusantium molestias labore eum earum! Magni dolores dignissimos incidunt aliquid cumque velit mollitia nisi unde? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur et aliquam minus. Aut dolores cupiditate molestiae incidunt optio autem at ut! Reprehenderit, consectetur fugit soluta eum beatae iure. Nisi, dolore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut minus repellat vitae placeat! Temporibus cupiditate nemo minima odio ab ratione est, dolorum ipsam maiores, deleniti eum. Provident consectetur harum ducimus.</p>
 			</div>
 		</section>
-		<section class="section2"></section>
+		<section class="section2">
+
+		</section>
 		<section class="section3">
 			<img src="../common/images/tearpaper6.png" alt="" />
 		</section>
 		<section class="section4">
-			<div class="placement" id="div"></div>
-			<div class="placementCell" id="div"></div>
-			<div class="Training" id="div"></div>
-			<div class="Recruiters" id="div"></div>
-			<div class="placementContact" id="div"></div>
-			<div class="Internship" id="div"></div>
-			<div class="MOU" id="div"></div>
+			<div class="placementCell" id="div">
+				<span>		
+					<h1>Placement Cell</h1>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas dolorem ut itaque blanditiis ab error exercitationem eos voluptate, numquam non culpa fugit quaerat qui natus eveniet nesciunt corporis et vero? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur enim quisquam dolorem quis at. Ipsum accusantium molestias labore eum earum! Magni dolores dignissimos incidunt aliquid cumque velit mollitia nisi unde? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur et aliquam minus. Aut dolores cupiditate molestiae incidunt optio autem at ut! Reprehenderit, consectetur fugit soluta eum beatae iure. Nisi, dolore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut minus repellat vitae placeat! Temporibus cupiditate nemo minima odio ab ratione est, dolorum ipsam maiores, deleniti eum. Provident consectetur harum ducimus.</p>
+				</span>
+			</div>
+			<div class="Training" id="div">
+				<span>		
+					<h1>Training Programmes</h1>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas dolorem ut itaque blanditiis ab error exercitationem eos voluptate, numquam non culpa fugit quaerat qui natus eveniet nesciunt corporis et vero? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur enim quisquam dolorem quis at. Ipsum accusantium molestias labore eum earum! Magni dolores dignissimos incidunt aliquid cumque velit mollitia nisi unde? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur et aliquam minus. Aut dolores cupiditate molestiae incidunt optio autem at ut! Reprehenderit, consectetur fugit soluta eum beatae iure. Nisi, dolore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut minus repellat vitae placeat! Temporibus cupiditate nemo minima odio ab ratione est, dolorum ipsam maiores, deleniti eum. Provident consectetur harum ducimus.</p>
+				</span>
+			</div>
+			<div class="Recruiters" id="div">
+				<span>		
+					<h1>Recruiters</h1>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas dolorem ut itaque blanditiis ab error exercitationem eos voluptate, numquam non culpa fugit quaerat qui natus eveniet nesciunt corporis et vero? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur enim quisquam dolorem quis at. Ipsum accusantium molestias labore eum earum! Magni dolores dignissimos incidunt aliquid cumque velit mollitia nisi unde? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur et aliquam minus. Aut dolores cupiditate molestiae incidunt optio autem at ut! Reprehenderit, consectetur fugit soluta eum beatae iure. Nisi, dolore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut minus repellat vitae placeat! Temporibus cupiditate nemo minima odio ab ratione est, dolorum ipsam maiores, deleniti eum. Provident consectetur harum ducimus.</p>
+				</span>
+			</div>
+			<div class="placementContact" id="div">
+				<span>		
+					<h1>Placement Contact</h1>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas dolorem ut itaque blanditiis ab error exercitationem eos voluptate, numquam non culpa fugit quaerat qui natus eveniet nesciunt corporis et vero? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur enim quisquam dolorem quis at. Ipsum accusantium molestias labore eum earum! Magni dolores dignissimos incidunt aliquid cumque velit mollitia nisi unde? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur et aliquam minus. Aut dolores cupiditate molestiae incidunt optio autem at ut! Reprehenderit, consectetur fugit soluta eum beatae iure. Nisi, dolore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut minus repellat vitae placeat! Temporibus cupiditate nemo minima odio ab ratione est, dolorum ipsam maiores, deleniti eum. Provident consectetur harum ducimus.</p>
+				</span>
+			</div>
+			<div class="Internship" id="div">
+				<span>		
+					<h1>Internship</h1>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas dolorem ut itaque blanditiis ab error exercitationem eos voluptate, numquam non culpa fugit quaerat qui natus eveniet nesciunt corporis et vero? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur enim quisquam dolorem quis at. Ipsum accusantium molestias labore eum earum! Magni dolores dignissimos incidunt aliquid cumque velit mollitia nisi unde? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur et aliquam minus. Aut dolores cupiditate molestiae incidunt optio autem at ut! Reprehenderit, consectetur fugit soluta eum beatae iure. Nisi, dolore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut minus repellat vitae placeat! Temporibus cupiditate nemo minima odio ab ratione est, dolorum ipsam maiores, deleniti eum. Provident consectetur harum ducimus.</p>
+				</span>
+			</div>
+			<div class="MOU" id="div">
+				<span>		
+					<h1>MOU</h1>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas dolorem ut itaque blanditiis ab error exercitationem eos voluptate, numquam non culpa fugit quaerat qui natus eveniet nesciunt corporis et vero? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur enim quisquam dolorem quis at. Ipsum accusantium molestias labore eum earum! Magni dolores dignissimos incidunt aliquid cumque velit mollitia nisi unde? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur et aliquam minus. Aut dolores cupiditate molestiae incidunt optio autem at ut! Reprehenderit, consectetur fugit soluta eum beatae iure. Nisi, dolore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut minus repellat vitae placeat! Temporibus cupiditate nemo minima odio ab ratione est, dolorum ipsam maiores, deleniti eum. Provident consectetur harum ducimus.</p>
+				</span>
+			</div>
 		</section>
 		<footer class="footer">
 			<section class="top">
 				<div class="footerLeft">
 					<div class="upper">
-						<img src="./common/images/SHK_logo" alt="Logo" />
+						<img src="../common/images/SHK_logo" alt="Logo" />
 					</div>
 				</div>
 				<div class="footerRight">
