--- a/activities/activities.html
+++ b/activities/activities.html
@@ -51,23 +51,33 @@
 			<h1 class="title3Activities">Courses Offered</h1>
 			<div class="section3Activities">
 				<div class="grid1 grid">
-					<h5>
+					<h5 class="txt-course">
 						BBA Airlines and <br />
 						Airport Management
 					</h5>
+					<a class="btn" target='_blank' href="../academics/academics.html#course1"
+						>Learn more</a
+					>
 				</div>
-				<div class="grid2 grid"><h5>BSC Aviation</h5></div>
+				<div class="grid2 grid">
+					<h5 class="txt-course">BSC Aviation</h5><br>
+					<a class="btn" target='_blank' href="../academics/academics.html#course2">learn more</a>
+				</div>
 				<div class="grid3 grid">
-					<h5>
+					<h5 class="txt-course">
 						MBA Airlines and<br />
 						Airport Management
 					</h5>
+					<a class="btn" target='_blank' href="../academics/academics.html#course3">Learn more</a>
 				</div>
 				<div class="grid4 grid">
-					<h5>
+					<h5 class="txt-course">
 						BSC Aircraft <br />
 						Maintenance
 					</h5>
+					<a class="btn" target='_blank' href="../academics/academics.html#course4"
+						>Learn more</a
+					>
 				</div>
 				<!-- <div class="grid5"></div>
 				<div class="grid6"></div> -->
@@ -109,9 +119,9 @@
 						Youth represent a substantial part of the membership of Red Cross
 						for its humanitarian commitment. Young volunteers can make a
 						significant contribution to meeting the needs of the most vulnerable
-						people within their local communities through YRC
-						programme. This has been designed to involve young people as much as
-						possible in the movement.
+						people within their local communities through YRC programme. This
+						has been designed to involve young people as much as possible in the
+						movement.
 					</div>
 				</div>
 				<div class="image image3"></div>
