--- a/admission/admission.html
+++ b/admission/admission.html
@@ -76,7 +76,8 @@
                 <div class="flex">
                     <div class="form-group">
                         <label for="address">Address</label> <br>
-                        <input type="street" class="form-control" id="autocomplete" placeholder="Street">
+                        <input style="width: 100%;" type="street" class="form-control" id="autocomplete" placeholder="Street"> <br>
+
                         <input type="city" class="form-control" id="inputCity" placeholder="City">
                         <input type="state" class="form-control" id="inputState" placeholder="State">
                         <input type="zip" class="form-control" id="inputZip" placeholder="Zip">
@@ -103,7 +104,6 @@
             </div>
         </form>
     </section>
-
 
 
 
