--- a/admission/admission.html
+++ b/admission/admission.html
@@ -61,7 +61,7 @@
                     <div class="gender">
                         <label for="male">&#160;&#160;&#160;&#160; Male :</label>
                         <input type="checkbox" name="" id="male">
-                        <label for="female">Female</label>
+                        <label for="female">Female :</label>
                         <input type="checkbox" name="" id="female">
                     </div>
                 </div>
@@ -105,7 +105,13 @@
         </form>
     </section>
 
-
+    <section class="images">
+        <h2>Brochure</h2>
+        <img src="./img/br1.jpeg" alt="">
+        <img src="./img/br2.jpeg" alt="">
+        <h3>Click here to download brochure</h3>
+        <a class="download" href="./img/brochure.pdf" download="SHK_Aviation_Academy_brochure">Download</a>
+    </section>
 
 
 
